--- a/src/components/subak-game/subak-game.module.css
+++ b/src/components/subak-game/subak-game.module.css
@@ -30,7 +30,6 @@
   align-items: center;
   justify-content: center;
   max-width: 100%;
-  max-height: 100vh;
   padding: 1.5em;
   user-select: none;
 
